[DD-39797] merge dd-39797 (cct-2260) into main branch (#427)
* [DD-39797] merge dd-39797 (cct-2260) into main branch

* fix merge issues

* fix dependencies

* updated progression version

* updated progression version